--- a/twitteotrope.plist
+++ b/twitteotrope.plist
@@ -7,8 +7,8 @@
 	<key>StartCalendarInterval</key>
 	<array>
 		<dict>
-			<key>Minute</key>
-			<integer>30</integer>
+			<key>Hour</key>
+			<integer>12</integer>
 		</dict>
 	</array>
 	<key>ServiceDescription</key>
@@ -17,7 +17,7 @@
 	<string>twitteotrope</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>./twitteotrope.rb</string>
+		<string>./twitteotrope.rb gradient</string>
 	</array>
 </dict>
 </plist>
